# CRISP

./: .buildinfo  .gitattributes  .lgtm.yml  =0.3.3  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  api.html  crisp-test  developer_guide.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  pytest.txt  run_tests.py  search.html  searchindex.js  setup.cfg  setup.py  test_crisp.txt  tutorials.html  user_guide.html
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  docs.yaml  test.yaml
CRISP/: __init__.py  _version.py  atom_correlation.py  cli.py  clustering_FrameAnalysis.py  clustering_TrajAnalysis.py  cn_atom.py  h_bond.py  h_bond_analysis.py  h_bond_visualization.py  msd_plot.py  prdf.py  visualize_atom_indices.py
CRISP/data/: atom_types.txt
CRISP/data_analysis/: __init__.py  clustering.py  contact_coordination.py  distance_analysis.py  h_bond.py  msd.py  prdf.py
CRISP/old/: atom_indices.py  clustering_DataAnalysis.py  cn_atom_analysis.py  cn_cal.py  contact.py  h_bond_visualization.py  msd_plot.py  prdf_plot.py
CRISP/simulation_utility/: __init__.py  atomic_indices.py  atomic_traj_linemap.py  error_analysis.py  interatomic_distances.py  subsampling.py
CRISP/tests/: __init__.py  test_CRISP.py
CRISP/visualisation_data/: __init__.py
_sources/: api.rst.txt  tutorials.rst.txt
_sources/autosummary/: CRISP.rst.txt
_sources/specific_tutorials/: Error_Analysis.rst.txt  H_Bond.rst.txt  RDF.rst.txt  Subsampling.rst.txt
autosummary/: CRISP.html
check_package/: __init__.py
check_package/tests/: test_check_package.py
devtools/: README.md
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  make.bat  requirements.txt  requirements.yaml  tutorials.rst  user_guide.rst
docs/autosummary/: CRISP.atom_correlation.rst  CRISP.rst
docs/intro_tutorial/: intro_tutorials.rst
docs/source/: modules.rst
docs/specific_tutorials/: Clustering.rst  Error_Analysis.rst  H_Bond.rst  RDF.rst  Subsampling.rst  clustering_correlation.rst  h_bond_analysis.rst
example/: CRISP_latest_example.ipynb  atom_indices.ipynb  crisp.ipynb  hydrogen_bond_results.txt  hydrogen_bonds.csv  msd_results.csv  total_hydrogen_bonds_per_frame.csv
example/CN_Data/: H_coordination_statistics.txt  O_coordination_statistics.txt  coordination_results.pkl
example/CN_data/: CN_O_statistics.txt
example/H_Bond_Data/: hydrogen_bonds_10skips.csv  hydrogen_bonds_1skips.csv  hydrogen_bonds_5skips.csv  total_hydrogen_bonds_per_frame_10skips.csv  total_hydrogen_bonds_per_frame_1skips.csv  total_hydrogen_bonds_per_frame_5skips.csv
example/Introductory_Tutorial/: wrapped_traj.traj
example/OLD/: coordination_data.pkl  hydrogen_bonds.csv  msd_results.csv  total_hydrogen_bonds_per_frame.csv
example/PRDF/: prdf_al_o_all.pkl  prdf_al_o_custom.pkl  prdf_o_al_custom.pkl  prdf_o_o_custom.pkl  prdf_ow_ow_all.pkl  rdf_O_O.pkl
example/SiAl15_clustering/: single_frame_analysis.pkl
example/SiAl15_traj_analysis/: SiAl15_traj_clusters.csv  SiAl15_traj_clusters.pkl  SiAl15_traj_clusters.txt  nvt_frame_data.txt
example/custom_ase/: rdf_total.pkl  (+1 more)
source/: CRISP.rst  CRISP.tests.rst  basin_swap.rst  corrector.rst  modules.rst
specific_tutorials/: Clustering.html  Error_Analysis.html  H_Bond.html  RDF.html  Subsampling.html
(+54 files in other folders)
