[build-system]
requires = ["setuptools>=61,<75", "wheel", "versioningit~=3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "crisp"
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
authors = [{ name = "IS", email = "indranilsaha15@gmail.com" }]
license = { text = "CC-BY-NC-SA-4.0 (see LICENSE)" }
dependencies = ["numpy", "ase"]

[project.optional-dependencies]
test = ["pytest>=6.1.2"]

[project.scripts]
CRISP = "CRISP.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = false
license-files = []  # disable emitting License-File metadata

[tool.setuptools.packages.find]
namespaces = false
where = ["."]
include = ["CRISP*"]

[tool.setuptools.package-data]
CRISP = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["CRISP/tests"]
addopts = "-ra"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "CRISP/_version.py"
