[build-system]
requires = ["setuptools>=61,<75", "wheel", "versioningit~=3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "CRISP_ase"  
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
authors = [{ name = "IS", email = "indranilsaha15@gmail.com" }]
license = { text = "CC-BY-NC-SA-4.0 (see LICENSE)" }
dependencies = ["numpy", "ase"]

[project.optional-dependencies]
test = ["pytest>=6.1.2"]

[project.scripts]
CRISP = "CRISP.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = false
license-files = []  

[tool.setuptools.packages.find]
namespaces = false
where = ["."]
include = ["CRISP*"]

[tool.setuptools.package-data]
CRISP = ["py.typed"]
CRISP_tests = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["CRISP/tests"]
addopts = "-ra"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
# Use PEP 440 public versions
tag = "{base_version}"
distance = "{base_version}.post{distance}"
dirty = "{base_version}.post{distance}.dev0"
distance-dirty = "{base_version}.post{distance}.dev0"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "1.0.1"

[tool.versioningit.write]
file = "CRISP/_version.py"
