# setup.cfg

[metadata]
name = CRISP
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A package to analyze ASE trajectories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/CRISP
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: CC BY-NC-SA 4.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    ase
    numpy

[options.package_data]
* = *.dat, *.txt, *.md

[options.extras_require]
dev =
    pytest
    sphinx
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    CRISP = CRISP.atom_indices:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
